--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,21 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyC_ikhVjmS7EG-l4nu4auRmThd2kpHi9SI",
+        authDomain: "instagram-58710.firebaseapp.com",
+        projectId: "instagram-58710",
+        storageBucket: "instagram-58710.appspot.com",
+        messagingSenderId: "655255217284",
+        appId: "1:655255217284:web:e603f7d0bf54f270c44ed1",
+        measurementId: "G-WKX6GS629V"
+      };
+
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
